# BolashakChat

./: .dockerignore  .env.example  .gitignore  .replit  DEPLOYMENT.md  Dockerfile  README.md  SECURITY.md  admin.py  agents.py  app.py  check_deployment.py  config.py  deployment_readiness_report.json  docker-compose.dev.yml  docker-compose.yml  init_sample_data.py  main.py  mistral_client.py  models.py  nginx.conf  pyproject.toml  replit.md  test_basic.py  tts_service.py  views.py
.github/workflows/: ci-cd.yml  cicd.yml
static/css/: chat.css  style.css
static/js/: bolashak-widget.js  chat.js  enhanced-features.js  enhanced-voicechat.js  main.js  stable  voice.js  voicechat.js
static/js/moduls/: constants.js  modelSelector.js  render.js
templates/: base.html  chat.html  index.html
templates/admin/: agent_knowledge.html  dashboard.html  documents.html
